--- a/index.html
+++ b/index.html
@@ -2,7 +2,17 @@
 <html>
   <head>
     <title>IceBreakers</title>
-    <href="style.css" link rel="stylesheet">
+    <style>
+    h1 {font-size: 60px;
+        font-weight: 300;
+        font-family: "Helvetica", "Arial", "sans-serif";
+      }
+    h3 {font-size: 28px;
+        color: #868e96;
+        text-decoration: underline;
+        font-family: "Verdana";
+      }  
+    </style>    
   </head>
   <body>
     <header>
